Revert b8cfa245b868d4778c68f407fcf3180dde895673 I applied a patch to fix flickering screenshot images in the VM tiles, but unfortunately it broke the way the template icons are displayed.

--- a/css/main.css
+++ b/css/main.css
@@ -38,19 +38,8 @@ div.icon.selected {
     background-color: silver;
 }
 
-#vms div img {
-    display: none;
-    margin-left: auto;
-    margin-right: auto;
-    width: 128px;
-    height: 128px;
-}
-
-#vms div img.active {
-    display: block;
-}
-
 .icon img {
+    display: block;
     margin-left: auto;
     margin-right: auto;
     width: 128px;
